model comprasion and evaluation

--- a/banking_customer_analyze.ipynb
+++ b/banking_customer_analyze.ipynb
@@ -1649,6 +1649,14 @@
     "\n",
     "    plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fdcd73a3",
+   "metadata": {},
+   "source": [
+    "The most important metric in this project is recall and the variable is 'yes'. Because 'yes' values are the potential customers to subscribe. And, the accuracy of the predicted 'yes' is represented by the recall metric. After the oversampling, recall of the yes values increased and Decision Tree, Random Forest and KNN have the highest recall values. When the other metrics are examined, Random Forest is the best model among the models used."
+   ]
   }
  ],
  "metadata": {
